# manga-recsys

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  cloudbuild.yml  docker-compose.yml  package-lock.json  pyproject.toml
app/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
app/src/: app.html
app/src/lib/: GephiNetwork.svelte  GroupInfo.svelte  MangaInfo.svelte  Network.svelte  PersonalLibraryChart.svelte  PersonalLibraryTable.svelte  Plot.svelte  PolarChart.svelte  Table.svelte  TableFuseHeaderFilter.svelte  data.js  personalization.js  tabulator.js
app/src/routes/: +layout.svelte  +page.md  +page.svelte
app/src/routes/data/: +page.md
app/src/routes/groups/: +page.md  +page.server.js  GroupSummaryTable.svelte
app/src/routes/manga/: +page.md  MangaInfoTable.svelte  ModelDescription.md  TagCounts.md
app/src/routes/openapi/: +layout.svelte  +page.svelte
app/src/routes/scanlation-groups/: +page.md  +page.server.js  GroupInfo.svelte  GroupMangaRecommendationTable.svelte  GroupMangaTable.svelte  (+1 more)
app/static/: openapi.yaml
app/static/openapi/: openapi.yaml
docker/: Dockerfile.app  Dockerfile.sys
manga_recsys/: scrape.py  spark.py
manga_recsys/commands/: __init__.py  chapter_parquet.py  group_parquet.py  manga_parquet.py  metadata.py  metadata_listing.py  parquet.py  sync.py  tag_rules.py  utils.py
manga_recsys/commands/models/: group_manga.py  manga.py  tag_rules.py
manga_recsys/commands/recommendation/: group_manga_network.py
manga_recsys/models/: manga.py
manga_recsys/scrapy/: chapter.py  group.py  manga.py  mangadex.py
nginx/: nginx.conf  remote.conf
notebooks/: 2022-09-12-mangadex-requests.ipynb  2022-12-10-eda.ipynb  2022-12-10-pre-process.ipynb  2022-12-14-fpgrowth.ipynb  2022-12-16-als-scangroup-tags.ipynb  2022-12-16-freq-item-network.ipynb  2022-12-16-mangadex-chapter.ipynb  2022-12-16-v3-metadata.ipynb  2022-12-17-mangadex-group.ipynb  20220912-00-mangadex-requests.ipynb  20221210-00-mangadex-manga.ipynb  20221214-00-fpgrowth.ipynb  20221216-01-freq-item-network.ipynb  20221216-02-als-scangroup-tags.ipynb  20221217-00-mangadex-group.ipynb  20221217-01-group-listing.ipynb  20221218-00-manga-group-metadata.ipynb  20221219-00-chapter-distribution.ipynb  20221219-00-manga-tag-word2vec.ipynb  20221220-00-manga-tag-word2vec-plot.ipynb  20221220-01-manga-tag-word2vec-rec.ipynb  20221222-00-manga-tag-word2vec-plot.ipynb  20221222-01-manga-tag-lsi.ipynb  20221227-00-manga-tag-lsi-genre.ipynb  20221227-01-tag-groups.ipynb  20221228-00-tag-network.ipynb  20221228-01-manga-name-fix.ipynb  20221229-00-network-cleanup.ipynb  20221229-01-network-cleanup.ipynb  20230105-00-word2vec-persist.ipynb  20230106-00-tag-categories.ipynb  20230118-00-tag-combos.ipynb
scripts/: check_versions.py  estimate_scrape_time.py  manga_network_rec.ps1  manga_w2v_lsi_rec.ps1  network_rec_experiments.ps1
terraform/: .terraform.lock.hcl  main.tf
tests/: conftest.py  test_commands_sync.py  test_commands_utils.py
(+20 files in other folders)
