[tool.poetry]
name = "manga-recsys"
version = "0.4.0"
description = ""
authors = ["geospiza <geospiza@protonmail.com>"]
readme = "README.md"
packages = [{ include = "manga_recsys" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
Scrapy = "^2.7.1"
scikit-learn = "^1.2.0"
pyspark = "^3.3.1"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
black = { version = "^22.12.0", allow-prereleases = true }
nb-black = "^1.0.7"

[tool.poetry.scripts]
manga-parquet = "manga_recsys.commands.manga_parquet:main"
chapter-parquet = "manga_recsys.commands.chapter_parquet:main"
group-parquet = "manga_recsys.commands.group_parquet:main"
tag-rules = "manga_recsys.commands.tag_rules:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
