[tool.poetry]
name = "manga-recsys"
version = "0.9.0"
description = ""
authors = ["geospiza <geospiza@protonmail.com>"]
readme = "README.md"
packages = [{ include = "manga_recsys" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
Scrapy = "^2.7.1"
scikit-learn = "^1.2.0"
pyspark = "^3.3.1"
matplotlib = "^3.6.2"
networkx = "^2.8.8"
tqdm = "^4.64.1"
click = "^8.1.3"
gensim = "^4.2.0"
pynndescent = "^0.5.8"
umap-learn = { extras = ["plot"], version = "^0.5.3" }
numba = "^0.56.4"
ndjson = "^0.3.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
black = { version = "^22.12.0", allow-prereleases = true }
nb-black = { git = "https://github.com/dnanhkhoa/nb_black.git", rev = "be0c810503867abc4a5e9d05ba75a16fce57dfee" }
pytest = "^7.2.0"
schemathesis = "^3.17.5"
ipywidgets = "^8.0.4"
gsutil = "^5.17"
crcmod = "^1.7"

[tool.poetry.scripts]
manga-recsys = "manga_recsys.commands:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
